@@ -5,6 +5,8 @@ import tasks.Epic;
 import tasks.Status;
 import tasks.Subtask;
 import tasks.Task;
+
+import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -12,29 +14,33 @@ import static org.junit.jupiter.api.Assertions.*;
 class InMemoryHistoryManagerTest {
 
     Task task;
+    HistoryManager historyManager;
+    TaskManager taskManager;
 
     @BeforeEach
     void beforeEach() {
-        task = new Task("Задача - 1", "Тест задачи - 1");
+        historyManager = Managers.getDefaultHistory();
+        taskManager = Managers.getDefault();
+        task = new Task("Задача - 1", "Тест задачи - 1",
+                LocalDateTime.of(2024, 9, 11, 11, 30), 90);
     }
 
     @Test
     void add() {
-        HistoryManager historyManager = new InMemoryHistoryManager();
         historyManager.add(task);
         final List<Task> history = historyManager.getHistory();
         assertNotNull(history, "История не пустая.");
         assertEquals(1, history.size(), "История не пустая.");
-        assertEquals(task, history.get(0));
+        assertEquals(task, history.getFirst());
     }
 
     @Test
     void remove() {
-        TaskManager taskManager = new InMemoryTaskManager();
         int t1 = taskManager.addTask(task);
         Epic epic1 = new Epic("1. Эпик", "Тест эпика - 1");
         int e1 = taskManager.addEpic(epic1);
-        Subtask subtask1 = new Subtask("1. Подзадача", "Тест подзадачи - 1", e1);
+        Subtask subtask1 = new Subtask("1. Подзадача", "Тест подзадачи - 1", e1,
+                LocalDateTime.of(2024, 9, 12, 11, 30), 90);
         int s1 = taskManager.addSubtask(subtask1);
 
         taskManager.getTask(t1);
@@ -51,32 +57,33 @@ class InMemoryHistoryManagerTest {
         assertEquals(1, taskManager.getHistory().size());
         taskManager.removeEpic(e1);
         assertEquals(0, taskManager.getHistory().size());
-
     }
 
     @Test
     void mustDeletePreviousViewSameTask() {
-        TaskManager taskManager = Managers.getDefault();
         final int taskId = taskManager.addTask(task);
         taskManager.getTask(taskId);
-        Task task2 = new Task(taskId, "Новая задача - 1", "Обновление задачи - 1", Status.DONE);
+        Task task2 = new Task(taskId, "Новая задача - 1", "Обновление задачи - 1", Status.DONE,
+                LocalDateTime.of(2024, 9, 13, 11, 30), 90);
         taskManager.taskUpdate(task2);
         taskManager.getTask(taskId);
 
         List<Task> history = taskManager.getHistory();
-        assertEquals(task, history.getFirst());
+        assertEquals(1, history.size());
         assertEquals(task2, history.getFirst());
+        assertNotEquals(task.getName(), history.getFirst().getName());
+        assertNotEquals(task.getDescription(), history.getFirst().getDescription());
     }
 
     @Test
     void mustNotStoreDuplicateTasks() {
-        HistoryManager historyManager = new InMemoryHistoryManager();
         historyManager.add(task);
         historyManager.add(task);
         assertEquals(1, historyManager.getHistory().size());
-        assertEquals(task, historyManager.getHistory().get(0));
+        assertEquals(task, historyManager.getHistory().getFirst());
 
-        Task task1 = new Task(0, "2. Задача", "Задача с одинаковым id", Status.DONE);
+        Task task1 = new Task(0, "2. Задача", "Задача с одинаковым id", Status.DONE,
+                LocalDateTime.of(2024, 9, 14, 11, 30), 90);
         assertEquals(task1.getId(), task.getId());
         historyManager.add(task);
         historyManager.add(task1);
@@ -85,10 +92,37 @@ class InMemoryHistoryManagerTest {
 
     @Test
     void theHistoryMustNotChangeAfterRemoveNonExistingTask() {
-        HistoryManager historyManager = new InMemoryHistoryManager();
         historyManager.add(task);
         historyManager.remove(5);
         assertEquals(1, historyManager.getHistory().size());
-        assertEquals(task, historyManager.getHistory().get(0));
+        assertEquals(task, historyManager.getHistory().getFirst());
+    }
+
+    @Test
+    void mustDeleteTheTaskAtTheBeginningInTheMiddleAndAtTheEndOfTheStory() {
+        historyManager.add(task);
+        Task task2 = new Task(1, "Задача - 1", "Описание - 1", Status.DONE,
+                LocalDateTime.of(2024, 9, 12, 11, 30), 90);
+        historyManager.add(task2);
+        Task task3 = new Task(2, "Задача - 1", "Описание - 1", Status.NEW,
+                LocalDateTime.of(2024, 9, 13, 11, 30), 90);
+        historyManager.add(task3);
+        Task task4 = new Task(3, "Задача - 1", "Описание - 1", Status.DONE,
+                LocalDateTime.of(2024, 9, 14, 11, 30), 90);
+        historyManager.add(task4);
+        Task task5 = new Task(4, "Задача - 1", "Описание - 1", Status.IN_PROGRESS,
+                LocalDateTime.of(2024, 9, 15, 11, 30), 90);
+        historyManager.add(task5);
+        Task task6 = new Task(5, "Задача - 1", "Описание - 1", Status.NEW,
+                LocalDateTime.of(2024, 9, 16, 11, 30), 90);
+        historyManager.add(task6);
+
+        assertEquals(6, historyManager.getHistory().size());
+        historyManager.remove(0);
+        assertEquals(5, historyManager.getHistory().size());
+        historyManager.remove(3);
+        assertEquals(4, historyManager.getHistory().size());
+        historyManager.remove(5);
+        assertEquals(3, historyManager.getHistory().size());
     }
 }
